// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrollableCalendar should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-calendar bpk-calendar--fixed"
    data-testid="bpk-calendar"
  >
    <header
      aria-hidden="true"
      class="bpk-calendar-header"
    >
      <ol
        class="bpk-calendar-header__week"
      >
        <li
          class="bpk-calendar-header__weekday"
          title="Monday"
        >
          <span>
            Mon
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Tuesday"
        >
          <span>
            Tue
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Wednesday"
        >
          <span>
            Wed
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Thursday"
        >
          <span>
            Thu
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Friday"
        >
          <span>
            Fri
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Saturday"
        >
          <span>
            Sat
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Sunday"
        >
          <span>
            Sun
          </span>
        </li>
      </ol>
    </header>
    <div
      class="bpk-scrollable-calendar-grid-list"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: 0px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkScrollableCalendar should render ranges correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-calendar bpk-calendar--fixed"
    data-testid="bpk-calendar"
  >
    <header
      aria-hidden="true"
      class="bpk-calendar-header"
    >
      <ol
        class="bpk-calendar-header__week"
      >
        <li
          class="bpk-calendar-header__weekday"
          title="Monday"
        >
          <span>
            Mon
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Tuesday"
        >
          <span>
            Tue
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Wednesday"
        >
          <span>
            Wed
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Thursday"
        >
          <span>
            Thu
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Friday"
        >
          <span>
            Fri
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Saturday"
        >
          <span>
            Sat
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Sunday"
        >
          <span>
            Sun
          </span>
        </li>
      </ol>
    </header>
    <div
      class="bpk-scrollable-calendar-grid-list"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: 0px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkScrollableCalendar should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-calendar bpk-calendar--fixed"
    data-testid="bpk-calendar"
  >
    <header
      aria-hidden="true"
      class="bpk-calendar-header"
    >
      <ol
        class="bpk-calendar-header__week"
      >
        <li
          class="bpk-calendar-header__weekday"
          title="Monday"
        >
          <span>
            Mon
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Tuesday"
        >
          <span>
            Tue
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Wednesday"
        >
          <span>
            Wed
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Thursday"
        >
          <span>
            Thu
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Friday"
        >
          <span>
            Fri
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Saturday"
        >
          <span>
            Sat
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Sunday"
        >
          <span>
            Sun
          </span>
        </li>
      </ol>
    </header>
    <div
      class="bpk-scrollable-calendar-grid-list"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: 0px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkScrollableCalendar should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-calendar custom-classname bpk-calendar--fixed"
    data-testid="bpk-calendar"
  >
    <header
      aria-hidden="true"
      class="bpk-calendar-header"
    >
      <ol
        class="bpk-calendar-header__week"
      >
        <li
          class="bpk-calendar-header__weekday"
          title="Monday"
        >
          <span>
            Mon
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Tuesday"
        >
          <span>
            Tue
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Wednesday"
        >
          <span>
            Wed
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Thursday"
        >
          <span>
            Thu
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Friday"
        >
          <span>
            Fri
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Saturday"
        >
          <span>
            Sat
          </span>
        </li>
        <li
          class="bpk-calendar-header__weekday"
          title="Sunday"
        >
          <span>
            Sun
          </span>
        </li>
      </ol>
    </header>
    <div
      class="bpk-scrollable-calendar-grid-list"
    >
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid ReactVirtualized__List"
          role="grid"
          style="box-sizing: border-box; direction: ltr; height: 0px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
